# swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "version": "1.0.0",
-        "title": "TodoBackEndAPI",
+        "title": "TodoBackEndMongoDb",
         "description": "TODO uygulaması CRUD işlerimleri örneği."
     },
     "consumes": [
@@ -20,10 +20,7 @@
                 "summary": "Get all rows",
                 "responses": {
                     "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
+                        "description": "Successfully"
                     }
                 }
             },
@@ -36,18 +33,12 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "required": false,
-                        "schema": {
-                            "$ref": "#/definitions/EventItemModel"
-                        }
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
+                        "description": "Successfully"
                     }
                 }
             }
@@ -62,16 +53,13 @@
                     {
                         "name": "id",
                         "required": true,
-                        "type": "integer",
+                        "type": "string",
                         "in": "path"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
+                        "description": "Successfully"
                     }
                 }
             },
@@ -84,24 +72,18 @@
                     {
                         "name": "id",
                         "required": true,
-                        "type": "integer",
+                        "type": "string",
                         "in": "path"
                     },
                     {
                         "in": "body",
                         "name": "body",
-                        "required": false,
-                        "schema": {
-                            "$ref": "#/definitions/EventItemModel"
-                        }
+                        "required": false
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
+                        "description": "Successfully"
                     }
                 }
             },
@@ -114,83 +96,14 @@
                     {
                         "name": "id",
                         "required": true,
-                        "type": "integer",
+                        "type": "string",
                         "in": "path"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
+                        "description": "Successfully"
                     }
-                }
-            }
-        },
-        "/events/changeStatu/{id}": {
-            "put": {
-                "tags": [
-                    "Events"
-                ],
-                "summary": "Dynamic change statu by id",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "type": "integer",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/EventResponseModel"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "EventResponseModel": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "rows": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/EventItemModel"
-                    }
-                },
-                "row": {
-                    "$ref": "#/definitions/EventItemModel"
-                },
-                "insertId": {
-                    "type": "integer"
-                },
-                "statusCode": {
-                    "type": "integer"
-                }
-            }
-        },
-        "EventItemModel": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "statu": {
-                    "type": "integer"
                 }
             }
         }
